# prof-viewer

./: .gitignore  Cargo.toml  README.md  TODO.md  check.sh  index.html
.github/workflows/: pages.yml  rust.yml
src/: app.rs  archive_data.rs  data.rs  deferred_data.rs  file_data.rs  lib.rs  logging.rs  main.rs  merge_data.rs  parallel_data.rs  sql_dump.rs  timestamp.rs
src/http/: client.rs  fetch.rs  fetch_native.rs  fetch_web.rs  mod.rs  schema.rs  server.rs
