[package]
name = "legion_prof_viewer"
version = "0.1.0"
authors = ["Elliott Slaughter <slaughter@cs.stanford.edu>", "Adam Siwiec <asiwiec@stanford.edu>"]
edition = "2021"
rust-version = "1.74"

[features]
default = []
client = ["dep:reqwest", "dep:url"]
server = ["dep:actix-cors", "dep:actix-web"]

[dependencies]
egui = "0.25.0"
egui_extras = "0.25.0"
eframe = { version = "0.25.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

serde = { version = "1", features = ["derive"] }
ciborium = { version = "0.2" }
zstd = { version = "0.13", default-features = false }

bytes = "1" # for reqwest binary data

rand = { version = "0.8" }
# transitive depedency, required for rand to support wasm
getrandom = { version = "0.2", features = ["js"] }

itertools = "0.12.0"
percentage = "0.1.0"
regex = "1.10.0"


# client
url = { version = "2", optional = true }


# server:
actix-web = { version = "4", optional = true }
actix-cors = { version = "0.6", optional = true }


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
rayon = "1.7"
reqwest = { version = "0.11", features = ["blocking"], optional = true }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11", features = [], optional = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Location"] }


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
